--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/image1.jpg");
+  background-image: url("../images/image3.jpg");
   font-family: sans-serif;
   margin-left: 25%;
   margin-right:25%;
@@ -10,6 +10,7 @@ p {
 }
 h1 {
   text-align: center;
+  font-style: inherit;
 }
 .box {
     border-radius: 25px;
@@ -30,6 +31,7 @@ h1 {
 a { 
   color: white;
   text-align: center;
+  text-decoration: none;
 }
 ul {
   text-align: center;
