--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,6 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box;
   }
-      * {
-      border: 1px solid red !important;
-      }
           .grid {
             margin: 0 auto;
             width: 100%;
@@ -52,3 +49,38 @@
               .col-12 {
                 width: 100%;
               }
+body {
+  background-image: url("../images/image3.jpg");
+  font-family: sans-serif;
+}
+p {
+  color:#222;
+  text-align: justify;
+}
+h1 {
+  text-align: center;
+}
+.box {
+    border-radius: 12px;
+    background: #000;
+    padding: 20px;
+    height: 85px;
+    width: 100%;
+}
+.home {
+    border-radius: 25px;
+    background: #000;
+    padding: 20px; 
+    width: 16.66%;
+    margin-bottom: 20px; 
+    margin-left: 40%;
+}
+a { 
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+ul {
+  text-align: center;
+  list-style-type: none;
+}
