--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,20 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box;
   }
+  body {
+    background-image: url(../images/water.jpg)
+  }
       * {
-      border: 1px solid red !important;
+      border: 1px solid transparent !important;
       }
       h1 {
         text-align: center;
       }
       a.button.button-primary {
           display: block;
-        width: 20%;
-        margin: 0 auto;
+          margin: 0 auto;
+      }
+      .row {
+        padding-bottom: 25px;
+        padding-top: 25px;
       }
