--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,8 @@
         padding-bottom: 25px;
         padding-top: 25px;
       }
+      .techblog-image {
+        max-width: 100%;
+        padding-left: 25%
+
+      }
