--- a/css/main.css
+++ b/css/main.css
@@ -25,5 +25,7 @@
       .techblog-image {
         max-width: 100%;
         padding-left: 25%
-
+      }
+      .p {
+        text-align: justify;
       }
